cleaned up the login form
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3014 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -390,11 +390,12 @@ text-shadow: 0 0 6px rgba(0,0,0,0.80);
 	-moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
 	-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
 	box-shadow: 0 0 6px rgba(0, 0, 0, 0.10);
+	width: 225px;
 }
 
 .a-signin { float: left; position: relative; display: block; clear: both; margin: 20px auto; }
 .a-signin form { }
-.a-signin label { display: block; float: none; font-size: 16px; width: auto; margin-bottom: 2px; }
+.a-signin label { display: block; width: 100% !important; float: none; font-size: 16px; width: auto; margin-bottom: 2px; }
 .a-signin .a-form-row input[type="text"],
 .a-signin .a-form-row input[type="password"] { width: 175px; padding: 4px; }
 .a-signin .a-form-row {	float: none; width: auto; clear: both; overflow: hidden; display: block; margin: 20px 20px -10px; }
@@ -402,6 +403,7 @@ text-shadow: 0 0 6px rgba(0,0,0,0.80);
 .a-signin .a-forgot-password { display: block; font-size: 11px; margin: -10px 20px 10px; float: left; color: #999; }
 .a-signin.forgot .message { width: 440px; }
 .a-signin.forgot .help { margin: 5px 0 0;}
+.a-signin .a-form-row .a-btn { font-size: 18px; width: 185px; height: 30px;}
 
 
 /* ASANDBOX Staging - Do Not Edit Message
