scoped login button style to the login page, the form in the global tools is different
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/trunk@3024 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -400,7 +400,7 @@ text-shadow: 0 0 6px rgba(0,0,0,0.80);
 .a-signin .a-forgot-password { display: block; font-size: 11px; margin: -10px 20px 10px; float: left; color: #999; }
 .a-signin.forgot .message { width: 440px; }
 .a-signin.forgot .help { margin: 5px 0 0;}
-.a-signin .a-form-row .a-btn { font-size: 18px; width: 185px; height: 30px;}
+.a-signin.page .a-form-row .a-btn { font-size: 18px; width: 185px; height: 30px;}
 
 
 /* ASANDBOX Staging - Do Not Edit Message
