--- a/web/css/main.css
+++ b/web/css/main.css
@@ -54,7 +54,9 @@ a:hover { text-decoration: underline; }
 
 .a-header { clear: both; position: relative; margin: 20px 0; float: left; width: 100%;}
 
-.a-content { float: left; clear: none; width: 720px; }
+.a-content { clear: both; }
+
+.a-footer { clear: both; margin: 20px 0; }
 
 .a-search.global { width: auto; clear: both; float: right; position: absolute; top: 20px; right: 20px; z-index: 3;}
 .a-search.global form { border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.1);}
@@ -74,6 +76,11 @@ a:hover { text-decoration: underline; }
 
 .a-blog-posts .a-content,
 .a-blog-events .a-content { clear: none; width: 720px; }
+
+/* ASANDBOX 404 Error Template 
+-------------------------------------*/
+.a-error404 .a-area-body { width: auto; float: none; clear: both; }
+.a-error404 .a-help { font-size: 14px; float: none; clear: both; margin: 0 0 10px 0; width: auto; }
 
 
 /* ASANDBOX Default Template
