CSS for Sandbox
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3049 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -54,12 +54,12 @@ a:hover { text-decoration: underline; }
 
 .a-header { clear: both; position: relative; margin: 20px 0; float: left; width: 100%;}
 
-.a-content { clear: both; }
+.a-content { }
 
 .a-footer { clear: both; margin: 20px 0; }
 
 .a-search.global { width: auto; clear: both; float: right; position: absolute; top: 20px; right: 20px; z-index: 3;}
-.a-search.global form { border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.1);}
+.a-search.global form { border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.1); }	
 .a-search.a-search-sidebar form { border: 1px inset #ccc; border: 1px inset rgba(0,0,0,0.1);}
 
 .a-area-logo { float: left; position: relative; z-index: 2; }
