1. Added the default aMedia message as a virtual page in pages.yml for future projects 2. Floated the footer because it was breaking layout
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3103 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -56,7 +56,7 @@ a:hover { text-decoration: underline; }
 
 .a-content { }
 
-.a-footer { clear: both; margin: 20px 0; }
+.a-footer { clear: both; float: left; width: 100%; margin: 20px 0; }
 
 .a-search.global { width: auto; clear: both; float: right; position: absolute; top: 20px; right: 20px; z-index: 3;}
 .a-search.global form { border: 1px solid #ccc; border: 1px solid rgba(0,0,0,0.1); }	
