--- a/web/css/main.css
+++ b/web/css/main.css
@@ -56,7 +56,7 @@ a:hover { text-decoration: underline; }
 
 .a-content { }
 
-.a-footer-wrapper { clear: both; border-top: 1px solid #ddd; }
+.a-footer-wrapper { clear: both; border-top: 1px solid #ddd; margin-top: 20px; }
 .a-footer { clear: both; width: 960px; margin: 0 auto; padding: 10px 0; }
 
 .a-search.global { width: auto; clear: both; float: right; position: absolute; top: 20px; right: 20px; z-index: 3;}
@@ -405,11 +405,11 @@ text-shadow: 0 0 6px rgba(0,0,0,0.80);
 .a-signin .a-form-row input[type="text"],
 .a-signin .a-form-row input[type="password"] { width: 175px; padding: 4px; }
 .a-signin .a-form-row {	float: none; width: auto; clear: both; display: block; margin: 20px 20px -10px; }
-.a-signin .a-form-row.submit { margin: 30px 20px 20px; }
+.a-signin .a-form-row.submit { margin: 30px 20px 20px }
 .a-signin .a-forgot-password { display: block; font-size: 11px; margin: -10px 20px 10px; float: left; color: #999; }
 .a-signin.forgot .message { width: 440px; }
 .a-signin.forgot .help { margin: 5px 0 0;}
-.a-signin.page .a-form-row .a-btn { font-size: 18px; width: 185px; height: 30px;}
+.a-signin.page .a-form-row .a-btn { width: 185px; }
 
 
 /* ASANDBOX Staging - Do Not Edit Message
